# pynanto2

./: .gitignore  README.md  pyodide.pyi  pyodide_http.pyi  requirements.in  setup.cfg  setup.py  tox.ini
pynanto/: __init__.py  conda-1-install-prod-deps  dev-requirements.txt  js.pyi  requirements.in  setup.cfg  setup.py
pynanto/.github/workflows/: ci.yml
pynanto/common/: bundle.py
pynanto/js/: __init__.pyi
pynanto/js_pyi/: README.md  assertions.py  clipboard.py  conversion.py  datamodel.py  dev-requirements.txt  g_dataclasses.py  generate.py  generate_js_pyi.py  generate_test.py  ig_test.py  ingest.py  ingest_stringify_test.py  ingest_test.py  is_test.py  itertools.py  main_develop.py  main_produce.py  main_unhandled.py  merge.py  merge_test.py  play_typed_dict.py  processor.py  produce.py  produce_test.py  pyi_generate.py  requirements.txt  stringify.py  test_generate.py  translation.py  webidls.py  webidls_test.py
pynanto/pynanto/: __init__.py  bootstrap.py  bootstrap_pyodide.js  bundle.py  bundles.py  config.py  exceptions.py  flask.py  pytest.ini  resource.py  response.py  routes.py  rpc.py  unsync.py  webserver.py
pynanto/pynanto/common/: bundle.py  (+2 more)
pynanto/pynanto_test/: __init__.py  test_bootstrap.py  test_end2end.py  test_stack_filename.py  test_unsync.py  test_webserver.py  unsync.py
pynanto/runConfigurations/: Python tests in js_pyi.run.xml  Python tests in pynanto.run.xml
pynanto/test_pynanto/: harness1.py  test_integration.py
pynanto/tests/: conftest.py  test_bootstrap.py  test_end2end.py  test_webserver.py
pynanto/webservers/: fastapi.py
(+208 files in other folders)
